--- a/src/app.css
+++ b/src/app.css
@@ -84,3 +84,16 @@
 	font-weight: 400;
 	font-style: normal;
 }
+
+::-webkit-scrollbar {
+	width: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: rgba(128, 128, 128, 0.5);
+	border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+	background-color: rgba(0, 0, 0, 0);
+}
